<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="WeJapa"
        android:textSize="@dimen/big_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginActivity_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginActivity_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/really_big_margin"
        android:background="@android:color/holo_orange_light"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="@dimen/really_small_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/membership_question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membership_question"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/loginActivity_signup_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/small_text"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/resend_verification_email_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/resend_verification_email"
        android:textAllCaps="false"
        android:textSize="@dimen/small_text" />

    <Button
        android:id="@+id/forgot_password_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/really_small_margin"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textSize="@dimen/small_text" />

</LinearLayout>